# termgpt

./: .gitignore  main.py  pyproject.toml
.github/: FUNDING.yml
src/: app.py  default.py  main.py  settings.py
src/commands/: __init__.py  config.py
src/commands/chat/: app.py  interactive.py  single.py
src/commands/config/: __init__.py  api_keys.py  app.py  init.py  profiles.py  show.py
src/core/: __init__.py  config.py  conversation.py  openai_client.py  profiles.py
src/utils/: __init__.py  validators.py
